# rust_network_discovery_tool

./: Cargo.toml  README.md  RELEASES.md  cleanup_duplicates.sql  optimize_schema.sql
.github/workflows/: release.yml
src/: main.rs  pcap.rs  test_utils.rs
src/db/: mod.rs
src/network/: communication.rs  device_control.rs  endpoint.rs  endpoint_attribute.rs  mdns_lookup.rs  mod.rs  packet_wrapper.rs  protocol.rs
src/network/device_control/: controller.rs  lg.rs  lg_thinq.rs  mod.rs  roku.rs  samsung.rs  types.rs
src/network/endpoint/: classification.rs  constants.rs  db.rs  detection.rs  device_rules_data.rs  endpoint_ops.rs  gateway.rs  mac_vendor_data.rs  mac_vendors.rs  mod.rs  model.rs  patterns.rs  types.rs  vendor.rs
src/packet/: communication.rs  mod.rs  protocol.rs
src/scanner/: arp.rs  icmp.rs  manager.rs  mod.rs  ndp.rs  netbios.rs  port.rs  snmp.rs  ssdp.rs
src/web/: api.rs  mod.rs
src/writer/: mod.rs
static/js/: app.js  classification.js  device-control.js  endpoints.js  filters.js  formatting.js  internet.js  lg-thinq.js  network-actions.js  notifications.js  pagination.js  pcap.js  refresh.js  scanner.js  settings.js  tabs.js  theme.js  utils.js
templates/: index.html
tools/device-rules-generator/: Cargo.toml  device_rules.toml
tools/device-rules-generator/src/: codegen.rs  main.rs  schema.rs
tools/oui-generator/: Cargo.toml  overrides.toml
tools/oui-generator/src/: codegen.rs  ieee.rs  macaddress_io.rs  main.rs  normalize.rs
