[package]
name = "awareness"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
actix-rt = "2.0"
ctrlc = "3.2.3"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "1.0"
futures ={ version = "0.3.31", features = ["async-await"] }
mdns-sd = "0.15" 
num-derive = "0.4.2"
num-traits = "0.2.18"
pnet = "0.35.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }