[package]
name = "rust_network_discovery_tool"
version = "0.5.4"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
actix-rt = "2.0"
actix-multipart = "0.7"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.2.3"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "1.0"
futures ={ version = "0.3.31", features = ["async-await"] }
lazy_static = "1.4"
mdns-sd = "0.15"
num-derive = "0.4.2"
pnet = "0.35.0"
pcap = "2.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-embed = "8.0"
mime_guess = "2.0"
tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
base64 = "0.21"
socket2 = { version = "0.5", features = ["all"] }
ssdp-client = "2.0"
ipnetwork = "0.20"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
pcap-file = "2.0"